<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="by.webstudia.radmonitoring.start.fragments.fragmentsVM.CityListFragmentsVM" />
    </data>
    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <View
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="@drawable/separator_blue"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="300dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/seekBar">

                <TextView
                    android:id="@+id/min_value"
                    android:text="0.00"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/mid_value"
                    android:text="0.35"
                    android:layout_width="100dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/max_value"
                    android:text="0.70"
                    android:layout_width="100dp"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>
            </LinearLayout>


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_centerInParent="true"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:progress="2"
                android:progressDrawable="@drawable/progress_drawable"
                android:thumb="@drawable/thumb_drawable"
                android:thumbOffset="9.5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="180dp"
                app:layout_constraintTop_toBottomOf="@+id/separator"
               />

            <TextView
                android:text="@string/power"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator"/>


            <TextView
                android:id="@+id/distance"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@{viewModel.seekbarValue}"
                android:textSize="@dimen/normalText"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="265dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@{viewModel.result}"
                android:textSize="@dimen/smallText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator" />


            <TextView
                android:id="@+id/indexMidCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="185dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:lineSpacingExtra="12sp"
                android:textColor="@color/white"
                android:textSize="@dimen/biggerText"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator" />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indexMidCountry" />

            <TextView
                android:id="@+id/velcomText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="@dimen/paddingLeftRight"
                android:text="@string/goToInfo"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indexMidCountry" />

            <Button
                android:id="@+id/selectCityButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/separator_blue"
                android:onClick="@{() -> viewModel.onSuperButtonClick()}"
                android:paddingEnd="@dimen/paddingLeftRight"
                android:paddingStart="@dimen/paddingLeftRight"
                android:text="@string/moreInfo"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/velcomText" />




        </android.support.constraint.ConstraintLayout>

</ScrollView>


</layout>